public/stylesheets/user-page.scss
body { 
  padding-top: 70px;
  padding-bottom: 30px;
  position: relative;
}

nav {

  h3 {
    margin: 0; 
    line-height: 30px;
    font-size: 1.2em;
    margin-left: 20px;
  }

  i.live {
    color: red;
  }

  .read-notification {
    opacity: .5;
  }

  .centered-text {
    text-align: center;

    p {
      margin: 0;
    }
  }

  .dropdown, .navbar-header, .navbar-right {
    display: inline-block;
  }

  .dropdown a:hover {
    cursor: pointer;
  }
  .flash {
    width: 100%;
    text-align: center;

    p {
      color: white;
      margin: 0;
      line-height: 30px;
    }
  }
  .pending {
    background-color: #3498db;
  }
  .success {
    background-color: #5cb85c;
  }

  .failure {
    background-color: #d9534f;
  }
}

.user-header {
  margin: 20px 0;
  text-align: right;

  img {
    width: 225px;
  }

  .user-info {
    text-align: left;
  }
}

.heading {
  text-align: center;
}

.goal-grid {
  text-align: center;
  margin: 20px; 

  .goal {
    width: 310px;
    margin: 20px auto;
    min-height: 347px;

    .height_80 {
      height: 80px;
      margin: 0;
      margin-top: 10px;
    }

    h4 {
      height: 40px;
    }

    button {
      margin-bottom: 10px;
    }

    img {
      height: 100px;
    }

    a:hover {
      cursor: pointer;
    }

  }

  .goal.successful-goal {
    border: 2px solid #5cb85c;
  }

  .goal.failed-goal {
    border: 2px solid #d9534f;
  }
}

.user-goal-grid {
  #custom-goal {
    height: 347px;
  }

  h3 {
    height: 52px;
  }
}


.bets-table, .winnings-table, .debts-table, .notifications-table {
  width: 80%;
  text-align: center;
  margin: 0 auto;

  th {
    text-align: center;
  }
  td {
    width: 40%;
  }
  td:first-child {
    width: 20%;
  }
}

footer {
  background-color: #e6e6e6;
  height: 30px;
  position: absolute;
  bottom: 0;
  width: 100%;
  margin-top: 50px;
  p {
    line-height: 30px;
    margin: 0;
  }
}

.circular-img {
  border-radius: 150px;
}

/* Goals page styles */

$GOALS_BOX_HEIGHT: 30px;

#past-goals-box {
  width: 80%;
  background-color: #5cb85c;
  margin: 10px auto;
  text-align: center;
  height: auto;
  border-radius: 10px;

  p {
    display: inline-block;
    color: white;
    padding-top: 0.5em;
    line-height: $GOALS_BOX_HEIGHT;
  }
}

.main-page-grid {
  .goal, #custom-goal {
    height: 450px;
  }

  #custom-goal .goal{
    height: 400px;
  }
}

.dropdown-menu-center {
  left: 20%;
}

#custom-goal {
  width: 340px;
  margin-top: 20px;
  background-color: #5cb85c;
  padding-bottom: 20px;
  border-radius: 4px;

  .goal {
    margin: 0 auto;
    min-height: 300px;
  }

  #add-goal-heading {
    color: white;
    line-height: 35px;
    margin: 0;
  }

  #add-goal-heading {
    cursor: pointer; 
  }

  input {
    text-align: center;
  }

  #input-title {
    font-size: 20px;
    width: 90%;
    margin: 5px 0;
  }

  #input-deadline {
    margin-left: 10px;
  }

  h4, h3 {
    display: inline-block;
    height: auto;
    font-size: 20px;
  }

  #quantity {
    font-size: 20px;
    width: 40px;
  }

  #item {
    font-size: 20px;
    width: 130px;
  }

  button {
    margin-top: 10px;
  }

}

#custom-goal.expanded {
  height: 550px;
}

.sm-img, .goal-grid .goal .sm-img {
    height: 40px;
    margin: 5px 0;
  }

.awaiting_results {
  color: green;
}

